--- a/todo.txt
+++ b/todo.txt
@@ -3,3 +3,5 @@ Center front page items even when screen is resized
 Make navbar mobile friendly
   Make navbar collapse into meny when there is not enough room
   Allow it to be more readable on mobile devices with smaller screens
+Another nav option is to make a pop up nav that appears when you click the screen
+Add a little arrow at the bottom of the landing screen so that users know to scroll down
