--- a/todo.txt
+++ b/todo.txt
@@ -1,3 +1,4 @@
 Center front page items even when screen is resized
   Dont allow them to overlap when resized
 Make navbar mobile friendly
+make a popup navbar in place of an actual nav "bar"
